# WebsiteBlockchain

backend/: main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.scss  App.tsx
